tests/dependencies/cycle.sy
a :: b
b :: a

start :: fn do
    a
end

// error: Error::CompileError { .. }
// error: Error::CompileError { .. }
